@@ -3,7 +3,8 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
--
+- Adding the 'language_revs' variable in the workflows and using it to display
+  information in the status_history
 Bug fixes:
 ~~~~~~~~~~
 - #333: folder_localrole_form is accessible without authentication. "Change
